update: 修改视频创建的入参
