# docs/swagger.json
@@ -864,6 +864,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "视频 UUID",
+                        "name": "uuid",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "视频名称",
                         "name": "name",
                         "in": "query",
@@ -874,13 +881,6 @@
                         "description": "视频分类 UUID",
                         "name": "category_uuid",
                         "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "file",
-                        "description": "视频文件",
-                        "name": "file",
-                        "in": "formData",
                         "required": true
                     }
                 ],
